<resources>
    <string name="app_name">ATM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_principal">Principal</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_contato">contatos</string>
    <string name="menu_sobre">Sobre</string>

    <string name="navegacao_titulo">ATM Consultoria</string>
    <string name="navegacao_email">atentimento@atmconsultoria.com.br</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_servicos">Sistema de gestão de Qualidade</string>
    <string name="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lacus lorem, porttitor eleifend dapibus eget, pellentesque nec massa. Proin urna diam, consequat at egestas ac, egestas et quam. Proin ultricies tempor ligula ac mollis. Sed id massa id turpis gravida porttitor. Duis vel placerat dolor, a volutpat dui. Vestibulum aliquet augue maximus vehicula porttitor. Cras non purus eget eros luctus pretium id at purus. Nunc et justo consequat, lobortis mi et, sollicitudin lectus. Mauris pulvinar non nisl ac sagittis. Suspendisse egestas nibh a ex finibus, nec dapibus eros euismod. Curabitur id turpis cursus, tempor mi eget, fringilla nulla. Curabitur rhoncus diam a arcu pellentesque maximus. Nam auctor mauris id eros imperdiet egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Sed luctus ante vitae scelerisque pharetra.</string>
    <string name="titulo_servicos2">Indicadores de desenpenho</string>
    <string name="paragrafo2">Nullam elementum vehicula mauris eget lacinia. Donec aliquet dolor velit, id tempus sapien tempor eget. Aliquam mollis quis diam eleifend sodales. Mauris tincidunt eros quis tristique scelerisque. Aenean sed faucibus erat. Phasellus sit amet tristique mauris. Sed ac turpis ultricies, gravida lacus quis, aliquam ipsum. Donec aliquet tempor est, et bibendum nibh pharetra eget. Pellentesque pharetra, felis eu semper tincidunt, turpis lacus dictum risus, id imperdiet urna massa sit amet augue.</string>
    <string name="clientes">Clientes</string>
    <string name="paragrafo_clientes1">Em mais de 15 anos d eexistência a ATM  acumula experiência em serviços de consultoria para empresas nacionais e internacional de diversos portes,tendo atendido mas de 1000 empresa desde sua abertura.</string>
    <string name="tituli1">Cielo</string>
    <string name="titulo2">Brastem</string>
    <string name="titulo3">Natura</string>
    <string name="titulo4">Lojas Americanas</string>
</resources>